# icu4x

./: Cargo.toml
.github/workflows/: artifacts-build.yml  build-test.yml  coverage.yml
components/calendar/src/: chinese.rs  dangi.rs  islamic.rs  japanese.rs  provider.rs  week_of.rs
components/casemap/: Cargo.toml
components/casemap/src/: casemapper.rs  internals.rs
components/collator/benches/: bench.rs
components/collator/src/: comparison.rs  options.rs
components/datetime/: Cargo.toml
components/datetime/benches/: datetime.rs
components/datetime/src/: datetime.rs
components/decimal/src/: format.rs  lib.rs
components/experimental/: Cargo.toml
components/locale_core/src/: serde.rs
components/locid_transform/: Cargo.toml
components/normalizer/: Cargo.toml
components/normalizer/src/: lib.rs  properties.rs  uts46.rs
components/plurals/src/: provider.rs
components/properties/: Cargo.toml
components/segmenter/: Cargo.toml
components/segmenter/src/: grapheme.rs  line.rs  sentence.rs  word.rs
components/timezone/: Cargo.toml
ffi/capi/src/: bidi.rs  errors.rs  list.rs  locale_directionality.rs  provider.rs
ffi/harfbuzz/src/: lib.rs
provider/adapters/src/: either.rs  empty.rs
provider/baked/src/: binary_search.rs
provider/blob/: Cargo.toml
provider/blob/src/: blob_data_provider.rs
provider/blob/tests/: test_versions.rs
provider/core/src/: any.rs  buf.rs  (+5 more)
provider/datagen/: Cargo.toml
tutorials/.cargo/: config.toml
tutorials/cpp/: bidi.cpp
utils/unvalidated/: Cargo.toml
utils/unvalidated/src/: lib.rs  uchar.rs  ustr.rs
(+246 files in other folders)
