[package]
name = "unvalidated"
version = "0.0.0"
rust-version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
databake = { workspace = true, optional = true }
serde = { version = "1", optional = true }
zerovec = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
bincode = "1"

[features]
alloc = []
databake = ["dep:databake"]
serde = ["dep:serde"]
zerovec = ["dep:zerovec", "alloc"]